--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -28,4 +28,7 @@
     <declare-styleable name="RecyclerViewMaxH">
         <attr name="max_height" format="dimension|reference"/>
     </declare-styleable>
+    <declare-styleable name="SelectButton">
+        <attr name="bg_drawable" format="reference"/>
+    </declare-styleable>
 </resources>
