--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -353,6 +353,13 @@
         <item name="android:textSize">@dimen/sp_16</item>
     </style>
 
+    <style name="text_16_red">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/main_red</item>
+        <item name="android:textSize">@dimen/sp_16</item>
+    </style>
+
     <style name="text_18_black">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
