用户粉丝列表，用户关注列表

--- a/app/src/main/res/layout/activity_inform_search.xml
+++ b/app/src/main/res/layout/activity_inform_search.xml
@@ -21,6 +21,7 @@
             android:textColor="@color/text_black"/>
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/inform_search_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
