--- a/app/src/main/res/layout/activity_img.xml
+++ b/app/src/main/res/layout/activity_img.xml
@@ -6,8 +6,8 @@
     android:background="@color/main_black"
     >
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/img_pager"
+    <cn.czyugang.tcg.client.widget.MultiImgView
+        android:id="@+id/multi_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
