--- a/app/src/main/res/layout/activity_pay_order.xml
+++ b/app/src/main/res/layout/activity_pay_order.xml
@@ -39,31 +39,20 @@
                 style="@style/text_16_black"
                 android:layout_marginLeft="@dimen/dp_18"
                 android:layout_toRightOf="@id/pay_order_need_text"
-                android:text="￥64.00"
+                android:text="￥0.00"
                 android:textColor="@color/main_red"/>
 
             <TextView
-                android:id="@+id/pay_order_delivery_text"
+                android:id="@+id/pay_order_delivery"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignRight="@id/pay_order_need_text"
                 android:layout_below="@+id/pay_order_need_text"
                 android:layout_marginTop="@dimen/dp_8"
-                android:text="含运费"
+                android:text="含运费 ￥0.00"
                 android:textColor="@color/text_gray"
-                android:textSize="@dimen/sp_12"/>
-
-            <TextView
-                android:id="@+id/pay_order_delivery_num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/pay_order_need_text"
-                android:layout_marginLeft="@dimen/dp_8"
-                android:layout_marginTop="@dimen/dp_8"
-                android:layout_toRightOf="@+id/pay_order_delivery_text"
-                android:text="￥3.00"
-                android:textColor="@color/text_gray"
-                android:textSize="@dimen/sp_12"/>
+                android:textSize="@dimen/sp_12"
+                android:visibility="gone"/>
 
         </RelativeLayout>
     </FrameLayout>
@@ -151,7 +140,7 @@
             android:id="@+id/pay_order_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="￥10.00"
+            android:text="￥0.00"
             android:textColor="@color/main_red"
             android:textSize="@dimen/sp_18"
             android:textStyle="bold"/>
