--- a/app/src/main/res/layout/fragment_good.xml
+++ b/app/src/main/res/layout/fragment_good.xml
@@ -8,7 +8,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -94,18 +95,27 @@
                 android:background="@color/bg"/>
 
             <!--标签-->
-            <TextView
+            <LinearLayout
                 android:id="@+id/good_tag"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_36"
+                android:layout_height="@dimen/dp_40"
                 android:layout_marginBottom="@dimen/dp_8"
                 android:layout_marginLeft="@dimen/dp_10"
                 android:layout_marginRight="@dimen/dp_10"
                 android:layout_marginTop="@dimen/dp_16"
                 android:gravity="center_vertical"
-                android:textColor="@color/text_black"
-                android:textSize="@dimen/sp_14"
-                />
+                android:orientation="horizontal"
+                android:background="@color/bg"
+                >
+                <include layout="@layout/space_h"/>
+
+                <ImageView
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:layout_marginRight="@dimen/dp_10"
+                    android:src="@drawable/icon_more_black"/>
+
+            </LinearLayout>
 
             <!--促销-->
             <LinearLayout
@@ -167,19 +177,13 @@
                 android:background="@color/bg"/>
             <!--包退-->
             <LinearLayout
+                android:id="@+id/good_guarantee"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_40"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/good_guarantee"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_10"
-                    android:textColor="@color/text_black"
-                    android:textSize="@dimen/sp_14"/>
-            </LinearLayout>
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/dp_10"
+                />
 
             <View
                 android:layout_width="match_parent"
