--- a/app/src/main/res/layout/item_follow_list.xml
+++ b/app/src/main/res/layout/item_follow_list.xml
@@ -26,6 +26,7 @@
             android:id="@+id/follow_list_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/dp_5"
             android:layout_above="@+id/follow_list_content"
             android:layout_toEndOf="@+id/follow_list_head"
             android:layout_toRightOf="@+id/follow_list_head"
@@ -37,7 +38,7 @@
             android:textSize="@dimen/sp_12" />
         <LinearLayout
             android:id="@+id/follw_list_commit"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/dp_50"
             android:layout_height="@dimen/dp_20"
             android:orientation="horizontal"
             android:layout_alignParentBottom="true" >
@@ -61,13 +62,13 @@
         </LinearLayout>
         <LinearLayout
             android:id="@+id/follw_list_thumb"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/dp_50"
             android:layout_height="@dimen/dp_20"
             android:layout_marginLeft="@dimen/dp_60"
             android:orientation="horizontal"
             android:layout_alignParentBottom="true">
         <TextView
-
+            android:id="@+id/follw_list_thumb_pic"
             android:layout_width="@dimen/dp_12"
             android:layout_height="@dimen/dp_12"
             android:layout_gravity="center"
