--- a/app/src/main/res/layout/item_aftersale.xml
+++ b/app/src/main/res/layout/item_aftersale.xml
@@ -120,6 +120,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/item_status_tag"
         android:layout_width="@dimen/dp_60"
         android:layout_height="@dimen/dp_60"
         android:layout_gravity="center_vertical|right"
