--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/main_bottom"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_50"
-        android:background="@color/grey_200"
+        android:background="@color/white"
         />
 
 </LinearLayout>
