--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -7,6 +7,7 @@
         android:id="@+id/fragment_collection_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/bg"
         />
     <include
         android:id="@+id/fragment_collection_bottom"
