--- a/app/src/main/res/layout/activity_pay_order.xml
+++ b/app/src/main/res/layout/activity_pay_order.xml
@@ -69,7 +69,9 @@
             android:id="@+id/pay_order_select_wallet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_10"/>
+            android:layout_marginLeft="@dimen/dp_10"
+            android:checked="true"
+            />
 
         <TextView
             style="@style/text_14_black"
