--- a/app/src/main/res/layout/view_bubble_toast.xml
+++ b/app/src/main/res/layout/view_bubble_toast.xml
@@ -14,6 +14,7 @@
         android:textSize="@dimen/sp_12"
         android:textColor="@color/white"
         android:text="iiiiiiiiiiiii"
+        android:lineSpacingMultiplier="1.3"
         />
 
 </FrameLayout>
