--- a/app/src/main/res/layout/item_promote_goods.xml
+++ b/app/src/main/res/layout/item_promote_goods.xml
@@ -40,8 +40,18 @@
         android:layout_marginTop="@dimen/dp_65"
         android:layout_marginBottom="@dimen/dp_10"
         android:layout_alignLeft="@id/item_name"
-        android:text="￥9.99  ￥12.99"
+        android:text="￥9.99"
         android:textColor="@color/main_red"/>
+    <TextView
+        android:id="@+id/item_price_special"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_7"
+        android:layout_toRightOf="@+id/item_price"
+        android:layout_alignBaseline="@+id/item_price"
+        android:text="￥9.99"
+        android:textSize="@dimen/sp_11"
+        android:textColor="@color/text_gray"/>
 
     <FrameLayout
         android:id="@+id/item_share"
@@ -49,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/dp_15"
-        android:layout_marginTop="@dimen/dp_20">
+        android:layout_centerVertical="true">
 
         <ImageView
             android:layout_width="@dimen/dp_22"
